# Unibase

./: .gitignore  README.md  pyproject.toml
app/: security.py
app/config/: constants.py
app/core/: assembler.py  chunk_deleter.py  chunk_get.py  chunk_uploader.py  file_format.py  fragmenter.py  store_chunks.py  store_metadata.py
app/delete/box/: app.js
app/delete/dropbox/: app.js  package-lock.json  package.json
app/delete/gd/: app.js
app/fast_api/: credits.py  main.py
app/storages/: __init__.py  box.py  dbx.py  gd.py
app/storages/auths/: box_auth_server.js
app/upload/box/: app.js
app/upload/dropbox/: app.js  package-lock.json  package.json
app/upload/gd/: app.js  package-lock.json  package.json
storage/: cole.txt\metadata.json  kek.txt\metadata.json  lol.txt\metadata.json  pig.txt\metadata.json
